k8s/shared/ethereum-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethereum-deploy
spec:
  selector:
    matchLabels:
      app: ethereum
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ethereum
    spec:
      containers:
        - name: ethereum
          image: smartcontract/devnet
          args: ["--config", "/devnet/k8s/ropsten.toml"]
          ports:
            - containerPort: 8545
            - containerPort: 8546
            - name: listening
              protocol: TCP
              containerPort: 30303
            - name: discovery
              protocol: UDP
              containerPort: 30303
          volumeMounts:
            - name: ethereum-storage
              mountPath: /data
      volumes:
        - name: ethereum-storage
          persistentVolumeClaim:
            claimName: ethereum-pv-claim
