k8s/shared/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chainlink-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: cl-sslcert
  backend:
    serviceName: chainlink-svc
    servicePort: 80
